	gawk replaced by gawk, as Ubuntu has no gawk under awk

2006-09-27    <tino@firebird.03.softkill.net>

	* main.h (tino_main_file): added

	* filetool.h (tino_file_mkdirs_forfile): first argument may be
	NULL, and return values optimized, and bugfix (the routine did not
	work previously, unsigned never is <0, compiler did not issue a
	warning).

2006-08-24    <tino@firebird.03.softkill.net>

	* getopt.h: min/max commented away for now
	(tino_getopt_arg): FN and VALID_STR commented away

	* data.h (tino_data_handler): create TINO_DATA * if NULL is given
	(tino_data_write): changed such that generic routines are more
	easy (can leave out the error processing).
	(tino_data_buf2, tino_data_buf): added

	* getopt.h: reduced a lot of internal variables, also started to
	cut the oversized and far too big routine tino_getopt_hook
	(previously tino_getopt) into smaller pieces.

2006-08-23    <tino@firebird.03.softkill.net>

	* strwild.h: Unit-Tests and test-main added

	* Makefile-test.sh (unit): bugfix, stderr was not captured

2006-08-16    <tino@firebird.03.softkill.net>

	* proc.h (tino_wait_child_exact): little bugfix

2006-08-15    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_var_set_arg): changed if sequence to
	support arg==0
	(tino_getopt_hook): hook added
	(tino_getopt): created to call tino_getopt_hook

2006-08-14    <tino@firebird.03.softkill.net>

	* ex.h (tino_vpexit): added

	* curl.h: added

	* data.h: added

	* buf.h (tino_buf_fetch): added

	* debug.h: TINO_DP_data and TINO_DP_curl added

2006-08-12    <tino@firebird.03.softkill.net>

	* filetool.h (tino_file_filenameptr) renamed to tino_file_filenameptr_const
	(tino_file_filenameptr): added as nonconst version

2006-08-11    <tino@firebird.03.softkill.net>

	* proc.h (tino_wait_child_exact): added

2006-08-07    <tino@firebird.03.softkill.net>

	* term.h: added

2006-08-06    <tino@firebird.03.softkill.net>

	* slist.h (tino_glist_first, tino_glist_next, tino_slist_data)